@@ -51,12 +51,12 @@ validate_sort_and_sortorder('name', ZBX_SORT_DOWN);
 
 $options = array(
 	'groups' => array(
-		'monitored_hosts' => 1,
-		'with_monitored_httptests' => 1,
+		'real_hosts' => true,
+		'with_httptests' => true
 	),
 	'hosts' => array(
-		'monitored_hosts' => 1,
-		'with_monitored_httptests' => 1,
+		'with_monitored_items' => true,
+		'with_httptests' => true
 	),
 	'hostid' => get_request('hostid', null),
 	'groupid' => get_request('groupid', null),
@@ -97,7 +97,6 @@ if ($pageFilter->hostsSelected) {
 	$options = array(
 		'output' => array('httptestid'),
 		'templated' => false,
-		'monitored' => true,
 		'filter' => array('status' => HTTPTEST_STATUS_ACTIVE),
 		'limit' => $config['search_limit'] + 1
 	);
@@ -115,13 +114,14 @@ if ($pageFilter->hostsSelected) {
 		'httptestids' => zbx_objectValues($httpTests, 'httptestid'),
 		'preservekeys' => true,
 		'output' => API_OUTPUT_EXTEND,
-		'selectHosts' => API_OUTPUT_EXTEND,
+		'selectHosts' => array('name', 'status'),
 		'selectSteps' => API_OUTPUT_COUNT,
 	));
 
 	foreach ($httpTests as &$httpTest) {
-		$host = reset($httpTest['hosts']);
-		$httpTest['hostname'] = $host['name'];
+		$httpTest['host'] = reset($httpTest['hosts']);
+		$httpTest['hostname'] = $httpTest['host']['name'];
+		unset($httpTest['hosts']);
 	}
 	unset($httpTest);
 
@@ -157,9 +157,12 @@ if ($pageFilter->hostsSelected) {
 			$status['style'] = 'unknown';
 		}
 
+		$cpsan = new CSpan($httpTest['hostname'],
+			($httpTest['host']['status'] == HOST_STATUS_NOT_MONITORED) ? 'not-monitored' : ''
+		);
 		$table->addRow(new CRow(array(
 			$displayNodes ? get_node_name_by_elid($httpTest['httptestid'], true) : null,
-			($_REQUEST['hostid'] > 0) ? null : $httpTest['hostname'],
+			($_REQUEST['hostid'] > 0) ? null : $cpsan,
 			new CLink($httpTest['name'], 'httpdetails.php?httptestid='.$httpTest['httptestid']),
 			$httpTest['steps'],
 			$lastcheck,
