@@ -1,6 +1,7 @@
 Changes for 2.1.3
 
 New features:
+..F....... [ZBXNEXT-317] enabled access to historical data for disabled hosts (Guntis, Ivo)
 ..F....... [ZBX-6896] list of media types for creating new medias in a user's profile sorted by name (Vitalij)
 ..F....... [ZBX-6868] maps default add icon defined in defines.inc.php (Vitalij)
 .......PS. [ZBX-6852] removed support of iODBC (Sasha)
